--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,21 @@
       <version>4.0.1</version>
       <scope>compile</scope>
     </dependency>
+    <!-- taglibs-standard-spec-*.jar -->
+    <!-- http://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-spec -->
+    <dependency>
+      <groupId>org.apache.taglibs</groupId>
+      <artifactId>taglibs-standard-spec</artifactId>
+      <version>1.2.5</version>
+    </dependency>
+
+    <!-- taglibs-standard-impl-*.jar -->
+    <!-- http://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-impl -->
+    <dependency>
+      <groupId>org.apache.taglibs</groupId>
+      <artifactId>taglibs-standard-impl</artifactId>
+      <version>1.2.5</version>
+    </dependency>
   </dependencies>
 
   <build>
